[package]
name = "ba-search"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.

[dependencies]
anyhow = "1.0.102"
bon = "3.9.1"
clap = { version = "4.6.1", features = ["derive"] }
cmd_lib = "2.0.0"
colored = "3.1.1"
rstest = "0.26.1"
scraper = "0.27.0"
